--- a/package.json
+++ b/package.json
@@ -18,5 +18,19 @@
   "homepage": "https://github.com/lopeselio/100DaysOfSolidity#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
+    "@types/node": "^14.18.16",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.5",
+    "hardhat": "^2.9.3",
+    "prettier": "^2.6.2",
+    "prettier-config-solidity": "^1.7.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "ts-node": "^10.7.0",
+    "typechain": "^8.0.0"
   }
 }
